# JHNet_HACKED

./: README.md
HACKEDGame/Doc/: Game Sever Launch Guide.docx  Network Diagram.docx  Network Message.docx  Network Summary.docx  시작 레벨 설정 방법.docx  자막 데이터 작성법.docx
HACKEDGame/Source/: HACKED.Target.cs  HACKEDEditor.Target.cs
HACKEDGame/Source/HACKED/: HACKED.Build.cs  HACKED.cpp  HACKED.h
HACKEDGame/Source/HACKED/Core/: HACKEDGameInstance.cpp  HACKEDGameInstance.h  HACKEDGameMode.cpp  HACKEDGameMode.h
HACKEDGame/Source/HACKED/InGame/: HACKEDInGameManager.cpp  HACKEDInGameManager.h  HACKEDTool.cpp  HACKEDTool.h
HACKEDGame/Source/JHNET/: JHNET.Build.cs
HACKEDGame/Source/JHNET/Core/: JHNETGameMode.cpp  JHNETGameMode.h
HACKEDGame/Source/JHNET/InGame/: JHNETTool.h
HACKEDGame/Source/JHNET/Lobby/: LobbyManager.cpp  LobbyManager.h
HACKEDGame/Source/JHNET/NetworkModule/: Log.cpp  NetworkData.h  NetworkInfo.h  NetworkTool.cpp  NetworkTool.h  ObjectPool.h  PacketStruct.h  PacketStructMacro.h  Serializer.cpp  Serializer.h  UtilityMacro.h
HACKEDHeartbeatServer/: MyHeartbeatServer.sln  README.md
HACKEDHeartbeatServer/MyHeartbeatServer/: MyHeartbeatServer.csproj  Program.cs
HACKEDHeartbeatServer/MyHeartbeatServer/Properties/: AssemblyInfo.cs
HACKEDNetworkServer/: .gitignore  CMakeLists.txt  JHNETGameServer.cpp  JHNETGameServer.h  README.md
HACKEDNetworkServer/LinuxBuild/: JHNET
HACKEDNetworkServer/NetworkModule/: JHNETTool.cpp  JHNETTool.h  Log.cpp  Log.h  MPSCQueue.h  MessageQueue.h  NetworkData.h  PacketStruct.h  PacketStructMacro.h  Serializer.cpp  Serializer.h  Spinlock.cpp  Spinlock.h  UtilityMacro.h
HACKEDNetworkServer/NetworkModule/ConfigParser/: ConfigParser.cpp  ConfigParser.h
HACKEDNetworkServer/Processor/: GameProcessor.cpp  GameProcessor.h  GameProcessorMessage.h
HACKEDNetworkServer/Processor/DataType/: GameState.h  ObjectPool.h  Overlapped.h  Player.cpp  Player.h  Room.cpp  Room.h  Socket.cpp  Socket.h
HACKEDNetworkServer/Processor/Manager/: PlayerManager.cpp  PlayerManager.h  RoomManager.cpp  RoomManager.h
HACKEDNetworkServer/Processor/TCP/: TCPReceiveProcessor.cpp  TCPReceiveProcessor.h
HACKEDNetworkServer/Processor/UDP/: UDPReceiveProcessor.cpp  UDPReceiveProcessor.h
HACKEDNetworkServer/Server/: EpollServer.cpp  EpollServer.h  IOCPServer.cpp  IOCPServer.h  Server.h  ServerNetworkSystem.cpp  ServerNetworkSystem.h
HACKEDNetworkServer/WinBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  JHNET.sln  JHNET.vcxproj  JHNET.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
(+218 files in other folders)
